[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/ui/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/Sprites/UI/boton.png" type="Texture" id=2]
[ext_resource path="res://assets/Sour_Gummy/static/SourGummy-Black.ttf" type="DynamicFontData" id=3]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=14]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 500, 250 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 500, 250 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 500, 250 )

[sub_resource type="DynamicFont" id=15]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 500, 250 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 500, 250 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 500, 250 )

[sub_resource type="DynamicFont" id=16]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 500, 250 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 500, 250 )

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 500, 250 )

[node name="MainMenu" type="Control"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.181
anchor_top = 0.104
anchor_right = 0.504
anchor_bottom = 0.168
margin_left = 400.0
margin_top = 200.0
margin_right = 700.0
margin_bottom = 475.0
size_flags_horizontal = 3
theme = SubResource( 1 )
alignment = 1

[node name="Jugar" type="Button" parent="VBoxContainer"]
margin_right = 300.0
margin_bottom = 120.0
rect_min_size = Vector2( 180, 120 )
rect_pivot_offset = Vector2( 120, 30 )
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = SubResource( 14 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 6 )
text = "Jugar"

[node name="Opciones" type="Button" parent="VBoxContainer"]
margin_top = 124.0
margin_right = 300.0
margin_bottom = 244.0
rect_min_size = Vector2( 180, 120 )
rect_pivot_offset = Vector2( 120, 30 )
size_flags_vertical = 0
custom_fonts/font = SubResource( 15 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 5 )
text = "Opciones"

[node name="Salir" type="Button" parent="VBoxContainer"]
margin_top = 248.0
margin_right = 300.0
margin_bottom = 368.0
rect_min_size = Vector2( 180, 120 )
rect_pivot_offset = Vector2( 120, 30 )
custom_fonts/font = SubResource( 16 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
text = "salir"

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="VBoxContainer/Jugar" to="." method="_on_Jugar_pressed"]
[connection signal="pressed" from="VBoxContainer/Opciones" to="." method="_on_Opciones_pressed"]
[connection signal="pressed" from="VBoxContainer/Salir" to="." method="_on_Salir_pressed"]
